crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__bad-exit-annotation_PYI036.py.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI036 [*] Star-args in `__exit__` should be annotated with `object`
  --> PYI036.py:54:31
   |
53 | class BadOne:
54 |     def __exit__(self, *args: Any) -> None: ... # PYI036: Bad star-args annotation
   |                               ^^^
55 |     async def __aexit__(self) -> None: ... # PYI036: Missing args
   |
help: Annotate star-args with `object`
   |
53 | class BadOne:
   -     def __exit__(self, *args: Any) -> None: ... # PYI036: Bad star-args annotation
54 +     def __exit__(self, *args: object) -> None: ... # PYI036: Bad star-args annotation
55 |     async def __aexit__(self) -> None: ... # PYI036: Missing args
   |

PYI036 If there are no star-args, `__aexit__` should have at least 3 non-keyword-only args (excluding `self`)
  --> PYI036.py:55:24
   |
53 | class BadOne:
54 |     def __exit__(self, *args: Any) -> None: ... # PYI036: Bad star-args annotation
55 |     async def __aexit__(self) -> None: ... # PYI036: Missing args
   |                        ^^^^^^
56 |
57 | class BadTwo:
   |

PYI036 All arguments after the first four in `__exit__` must have a default value
  --> PYI036.py:58:38
   |
57 | class BadTwo:
58 |     def __exit__(self, typ, exc, tb, weird_extra_arg) -> None: ... # PYI036: Extra arg must have default
   |                                      ^^^^^^^^^^^^^^^
59 |     async def __aexit__(self, typ, exc, tb, *, weird_extra_arg) -> None: ...# PYI036: Extra arg must have default
   |

PYI036 All keyword-only arguments in `__aexit__` must have a default value
  --> PYI036.py:59:48
   |
57 | class BadTwo:
58 |     def __exit__(self, typ, exc, tb, weird_extra_arg) -> None: ... # PYI036: Extra arg must have default
59 |     async def __aexit__(self, typ, exc, tb, *, weird_extra_arg) -> None: ...# PYI036: Extra arg must have default
   |                                                ^^^^^^^^^^^^^^^
60 |
61 | class BadThree:
   |

PYI036 The first argument in `__exit__` should be annotated with `object` or `type[BaseException] | None`
  --> PYI036.py:62:29
   |
61 | class BadThree:
62 |     def __exit__(self, typ: type[BaseException], exc: BaseException | None, tb: TracebackType | None) -> None: ... # PYI036: First arg…
   |                             ^^^^^^^^^^^^^^^^^^^
63 |     async def __aexit__(self, __typ: type[BaseException] | None, __exc: BaseException, __tb: TracebackType) -> bool | None: ... # PYI0…
   |

PYI036 The second argument in `__aexit__` should be annotated with `object` or `BaseException | None`
  --> PYI036.py:63:73
   |
61 | class BadThree:
62 |     def __exit__(self, typ: type[BaseException], exc: BaseException | None, tb: TracebackType | None) -> None: ... # PYI036: First arg…
63 |     async def __aexit__(self, __typ: type[BaseException] | None, __exc: BaseException, __tb: TracebackType) -> bool | None: ... # PYI0…
   |                                                                         ^^^^^^^^^^^^^
64 |
65 | class BadFour:
   |

PYI036 The third argument in `__aexit__` should be annotated with `object` or `types.TracebackType | None`
  --> PYI036.py:63:94
   |
61 | class BadThree:
62 |     def __exit__(self, typ: type[BaseException], exc: BaseException | None, tb: TracebackType | None) -> None: ... # PYI036: First arg…
63 |     async def __aexit__(self, __typ: type[BaseException] | None, __exc: BaseException, __tb: TracebackType) -> bool | None: ... # PYI0…
   |                                                                                              ^^^^^^^^^^^^^
64 |
65 | class BadFour:
   |

PYI036 The third argument in `__exit__` should be annotated with `object` or `types.TracebackType | None`
  --> PYI036.py:66:111
   |
65 | class BadFour:
66 |     def __exit__(self, typ: typing.Optional[type[BaseException]], exc: typing.Union[BaseException, None], tb: TracebackType) -> None: …
   |                                                                                                               ^^^^^^^^^^^^^
67 |     async def __aexit__(self, __typ: type[BaseException] | None, __exc: BaseException | None, __tb: typing.Union[TracebackType, None, …
   |

PYI036 The third argument in `__aexit__` should be annotated with `object` or `types.TracebackType | None`
  --> PYI036.py:67:101
   |
65 | …
66 | …Exception]], exc: typing.Union[BaseException, None], tb: TracebackType) -> None: ... # PYI036: Third arg has bad annotation
67 | …on] | None, __exc: BaseException | None, __tb: typing.Union[TracebackType, None, int]) -> bool | None: ... # PYI036: Third arg has ba…
   |                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
68 | …
69 | …
   |

PYI036 The first argument in `__exit__` should be annotated with `object` or `type[BaseException] | None`
  --> PYI036.py:70:29
   |
69 | class BadFive:
70 |     def __exit__(self, typ: BaseException | None, *args: list[str]) -> bool: ... # PYI036: Bad star-args annotation
   |                             ^^^^^^^^^^^^^^^^^^^^
71 |     async def __aexit__(self, /, typ: type[BaseException] | None, *args: Any) -> Awaitable[None]: ... # PYI036: Bad star-args annotati…
   |

PYI036 [*] Star-args in `__exit__` should be annotated with `object`
  --> PYI036.py:70:58
   |
69 | class BadFive:
70 |     def __exit__(self, typ: BaseException | None, *args: list[str]) -> bool: ... # PYI036: Bad star-args annotation
   |                                                          ^^^^^^^^^
71 |     async def __aexit__(self, /, typ: type[BaseException] | None, *args: Any) -> Awaitable[None]: ... # PYI036: Bad star-args annotati…
   |
help: Annotate star-args with `object`
   |
69 | class BadFive:
   -     def __exit__(self, typ: BaseException | None, *args: list[str]) -> bool: ... # PYI036: Bad star-args annotation
70 +     def __exit__(self, typ: BaseException | None, *args: object) -> bool: ... # PYI036: Bad star-args annotation
71 |     async def __aexit__(self, /, typ: type[BaseException] | None, *args: Any) -> Awaitable[None]: ... # PYI036: Bad star-args annotation
   |

PYI036 [*] Star-args in `__aexit__` should be annotated with `object`
  --> PYI036.py:71:74
   |
69 | class BadFive:
70 |     def __exit__(self, typ: BaseException | None, *args: list[str]) -> bool: ... # PYI036: Bad star-args annotation
71 |     async def __aexit__(self, /, typ: type[BaseException] | None, *args: Any) -> Awaitable[None]: ... # PYI036: Bad star-args annotati…
   |                                                                          ^^^
72 |
73 | class BadSix:
   |
help: Annotate star-args with `object`
   |
70 |     def __exit__(self, typ: BaseException | None, *args: list[str]) -> bool: ... # PYI036: Bad star-args annotation
   -     async def __aexit__(self, /, typ: type[BaseException] | None, *args: Any) -> Awaitable[None]: ... # PYI036: Bad star-args annotation
71 +     async def __aexit__(self, /, typ: type[BaseException] | None, *args: object) -> Awaitable[None]: ... # PYI036: Bad star-args annotation
72 |
   |

PYI036 All arguments after the first four in `__exit__` must have a default value
  --> PYI036.py:74:38
   |
73 | class BadSix:
74 |     def __exit__(self, typ, exc, tb, weird_extra_arg, extra_arg2 = None) -> None: ... # PYI036: Extra arg must have default
   |                                      ^^^^^^^^^^^^^^^
75 |     async def __aexit__(self, typ, exc, tb, *, weird_extra_arg) -> None: ... # PYI036: kwargs must have default
   |

PYI036 All keyword-only arguments in `__aexit__` must have a default value
  --> PYI036.py:75:48
   |
73 | class BadSix:
74 |     def __exit__(self, typ, exc, tb, weird_extra_arg, extra_arg2 = None) -> None: ... # PYI036: Extra arg must have default
75 |     async def __aexit__(self, typ, exc, tb, *, weird_extra_arg) -> None: ... # PYI036: kwargs must have default
   |                                                ^^^^^^^^^^^^^^^
76 |
77 | class AllPositionalOnlyArgs:
   |

PYI036 The first argument in `__exit__` should be annotated with `object` or `type[BaseException] | None`
  --> PYI036.py:82:29
   |
81 | class BadAllPositionalOnlyArgs:
82 |     def __exit__(self, typ: type[Exception] | None, exc: BaseException | None, tb: TracebackType | None, /) -> None: ...
   |                             ^^^^^^^^^^^^^^^^^^^^^^
83 |     async def __aexit__(self, typ: type[BaseException] | None, exc: BaseException | None, tb: TracebackType, /) -> None: ...
   |

PYI036 The third argument in `__aexit__` should be annotated with `object` or `types.TracebackType | None`
  --> PYI036.py:83:95
   |
81 | class BadAllPositionalOnlyArgs:
82 |     def __exit__(self, typ: type[Exception] | None, exc: BaseException | None, tb: TracebackType | None, /) -> None: ...
83 |     async def __aexit__(self, typ: type[BaseException] | None, exc: BaseException | None, tb: TracebackType, /) -> None: ...
   |                                                                                               ^^^^^^^^^^^^^
84 |
85 | # Definitions not in a class scope can do whatever, we don't care
   |

PYI036 Annotations for a three-argument `__exit__` overload (excluding `self`) should either be `None, None, None` or `type[BaseException], BaseException, types.TracebackType`
   --> PYI036.py:161:17
    |
159 |     def __exit__(self, exc_typ: None, exc: None, tb: None) -> None: ...  # Okay
160 |     @overload
161 |     def __exit__(self, exc_typ: Exception, exc: Exception, tb: TracebackType) -> None: ...  # PYI036
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
162 |     def __exit__(self, exc_typ: type[BaseException] | None, exc: BaseException | None, tb: TracebackType | None) -> None: ...
    |

PYI036 Annotations for a three-argument `__exit__` overload (excluding `self`) should either be `None, None, None` or `type[BaseException], BaseException, types.TracebackType`
   --> PYI036.py:166:17
    |
164 | class UnacceptableOverload2:
165 |     @overload
166 |     def __exit__(self, exc_typ: type[BaseException] | None, exc: None, tb: None) -> None: ...  # PYI036
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
167 |     @overload
168 |     def __exit__(self, exc_typ: object, exc: Exception, tb: builtins.TracebackType) -> None: ...  # PYI036
    |

PYI036 Annotations for a three-argument `__exit__` overload (excluding `self`) should either be `None, None, None` or `type[BaseException], BaseException, types.TracebackType`
   --> PYI036.py:168:17
    |
166 |     def __exit__(self, exc_typ: type[BaseException] | None, exc: None, tb: None) -> None: ...  # PYI036
167 |     @overload
168 |     def __exit__(self, exc_typ: object, exc: Exception, tb: builtins.TracebackType) -> None: ...  # PYI036
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
169 |     def __exit__(self, exc_typ: type[BaseException] | None, exc: BaseException | None, tb: TracebackType | None) -> None: ...
    |

PYI036 The first argument in `__exit__` should be annotated with `object` or `type[BaseException] | None`
   --> PYI036.py:187:29
    |
186 | class BadStringized:
187 |     def __exit__(self, typ: "type[BaseException]", exc: "BaseException | None", tb: "TracebackType | None") -> None: ... # PYI036: Fi…
    |                             ^^^^^^^^^^^^^^^^^^^^^
188 |     async def __aexit__(self, typ: "type[BaseException] | None", exc: "Exception | None", tb: "TracebackType") -> None: ... # PYI036:…
    |

PYI036 The second argument in `__aexit__` should be annotated with `object` or `BaseException | None`
   --> PYI036.py:188:71
    |
186 | class BadStringized:
187 |     def __exit__(self, typ: "type[BaseException]", exc: "BaseException | None", tb: "TracebackType | None") -> None: ... # PYI036: Fi…
188 |     async def __aexit__(self, typ: "type[BaseException] | None", exc: "Exception | None", tb: "TracebackType") -> None: ... # PYI036:…
    |                                                                       ^^^^^^^^^^^^^^^^^^
189 |
190 | class BadStringizedStarArgs:
    |

PYI036 The third argument in `__aexit__` should be annotated with `object` or `types.TracebackType | None`
   --> PYI036.py:188:95
    |
186 | class BadStringized:
187 |     def __exit__(self, typ: "type[BaseException]", exc: "BaseException | None", tb: "TracebackType | None") -> None: ... # PYI036: Fi…
188 |     async def __aexit__(self, typ: "type[BaseException] | None", exc: "Exception | None", tb: "TracebackType") -> None: ... # PYI036:…
    |                                                                                               ^^^^^^^^^^^^^^^
189 |
190 | class BadStringizedStarArgs:
    |

PYI036 [*] Star-args in `__exit__` should be annotated with `object`
   --> PYI036.py:191:31
    |
190 | class BadStringizedStarArgs:
191 |     def __exit__(self, *args: "Any") -> None: ... # PYI036: Bad star-args annotation
    |                               ^^^^^
192 |     async def __aexit__(self, typ: "type[BaseException] | None", *args: "list[str]") -> None: ... # PYI036: Bad star-args annotation
    |
help: Annotate star-args with `object`
    |
190 | class BadStringizedStarArgs:
    -     def __exit__(self, *args: "Any") -> None: ... # PYI036: Bad star-args annotation
191 +     def __exit__(self, *args: object) -> None: ... # PYI036: Bad star-args annotation
192 |     async def __aexit__(self, typ: "type[BaseException] | None", *args: "list[str]") -> None: ... # PYI036: Bad star-args annotation
    |

PYI036 [*] Star-args in `__aexit__` should be annotated with `object`
   --> PYI036.py:192:73
    |
190 | class BadStringizedStarArgs:
191 |     def __exit__(self, *args: "Any") -> None: ... # PYI036: Bad star-args annotation
192 |     async def __aexit__(self, typ: "type[BaseException] | None", *args: "list[str]") -> None: ... # PYI036: Bad star-args annotation
    |                                                                         ^^^^^^^^^^^
193 |
194 | class AcceptableStringizedOverload:
    |
help: Annotate star-args with `object`
    |
191 |     def __exit__(self, *args: "Any") -> None: ... # PYI036: Bad star-args annotation
    -     async def __aexit__(self, typ: "type[BaseException] | None", *args: "list[str]") -> None: ... # PYI036: Bad star-args annotation
192 +     async def __aexit__(self, typ: "type[BaseException] | None", *args: object) -> None: ... # PYI036: Bad star-args annotation
193 |
    |

PYI036 Annotations for a three-argument `__exit__` overload (excluding `self`) should either be `None, None, None` or `type[BaseException], BaseException, types.TracebackType`
   --> PYI036.py:205:17
    |
203 |     def __exit__(self, exc_typ: "None", exc: "None", tb: "None") -> None: ...  # Okay
204 |     @overload
205 |     def __exit__(self, exc_typ: "Exception", exc: "Exception", tb: "TracebackType") -> None: ...  # PYI036
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
206 |     def __exit__(self, exc_typ: "type[BaseException] | None", exc: "BaseException | None", tb: "TracebackType | None") -> None: ...
    |
